# oura-full-read-skill

./: README.md  SKILL.md
agents/: openai.yaml
assets/oura-full-read/: README.md  pyproject.toml
assets/oura-full-read/docs/: full-reader.md
assets/oura-full-read/src/oura_full_read/: __init__.py  bluetooth.py  cli.py  constants.py  heart_rate.py  util.py
assets/oura-full-read/tests/: test_heart_rate.py
references/: protocol.md
scripts/: oura_full_read.py
